// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#createDomainEntity should convert to entity 1`] = `
Object {
  "_class": Array [
    "Domain",
  ],
  "_key": "google_domain_jupiterone.io",
  "_rawData": Array [
    Object {
      "name": "default",
      "rawData": Object {
        "creationTime": "1549555037874",
        "domainAliases": Array [
          Object {
            "creationTime": "1549555037874",
            "domainAliasName": "jupiterone.io.test-google-a.com",
            "etag": "abc12345",
            "kind": "admin#directory#domainAlias",
            "parentDomainName": "jupiterone.io",
            "verified": true,
          },
        ],
        "domainName": "jupiterone.io",
        "etag": "abc123",
        "isPrimary": false,
        "kind": "admin#directory#domain",
        "verified": true,
      },
    },
  ],
  "_type": "google_domain",
  "createdOn": 1549555037874,
  "displayName": "jupiterone.io",
  "domainName": "jupiterone.io",
  "emailDomain": "jupiterone.io",
  "id": "jupiterone.io",
  "name": "jupiterone.io",
  "primary": false,
  "verified": true,
}
`;

exports[`#createDomainEntity should convert to entity with isPrimary true 1`] = `
Object {
  "_class": Array [
    "Domain",
  ],
  "_key": "google_domain_jupiterone.io",
  "_rawData": Array [
    Object {
      "name": "default",
      "rawData": Object {
        "creationTime": "1549555037874",
        "domainAliases": Array [
          Object {
            "creationTime": "1549555037874",
            "domainAliasName": "jupiterone.io.test-google-a.com",
            "etag": "abc12345",
            "kind": "admin#directory#domainAlias",
            "parentDomainName": "jupiterone.io",
            "verified": true,
          },
        ],
        "domainName": "jupiterone.io",
        "etag": "abc123",
        "isPrimary": true,
        "kind": "admin#directory#domain",
        "verified": true,
      },
    },
  ],
  "_type": "google_domain",
  "createdOn": 1549555037874,
  "displayName": "jupiterone.io",
  "domainName": "jupiterone.io",
  "emailDomain": "jupiterone.io",
  "id": "jupiterone.io",
  "name": "jupiterone.io",
  "primary": true,
  "verified": true,
}
`;

exports[`#createDomainEntity should convert to entity with verified false 1`] = `
Object {
  "_class": Array [
    "Domain",
  ],
  "_key": "google_domain_jupiterone.io",
  "_rawData": Array [
    Object {
      "name": "default",
      "rawData": Object {
        "creationTime": "1549555037874",
        "domainAliases": Array [
          Object {
            "creationTime": "1549555037874",
            "domainAliasName": "jupiterone.io.test-google-a.com",
            "etag": "abc12345",
            "kind": "admin#directory#domainAlias",
            "parentDomainName": "jupiterone.io",
            "verified": true,
          },
        ],
        "domainName": "jupiterone.io",
        "etag": "abc123",
        "isPrimary": false,
        "kind": "admin#directory#domain",
        "verified": false,
      },
    },
  ],
  "_type": "google_domain",
  "createdOn": 1549555037874,
  "displayName": "jupiterone.io",
  "domainName": "jupiterone.io",
  "emailDomain": "jupiterone.io",
  "id": "jupiterone.io",
  "name": "jupiterone.io",
  "primary": false,
  "verified": false,
}
`;
